@@ -1,6 +1,7 @@
 # next
 - Redesigns destructive actions confirmation dialogs
 - Splits saving the queue into two separate dialogs
+- Fixes overflowing text in queue
 
 # 4.0
 - Adds removing a playlist
